--- a/css/UI.css
+++ b/css/UI.css
@@ -1,4 +1,4 @@
-.bgc-1{background-color: #EEEBEB;}
+.bgc-1{background-color: #fdd;}
 .bgc-2{background-color:#555;}
 .bgc-3{background-color:#777;}
 .bgc-4{background-color:#999;}
